--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <br>10/9/2021
   <h3>New Aquatic Wasteland:</h3>
+<p>canvas20211009</p>
   <canvas id="canvas20211009" width="500px" height="250px" style="border:1px solid #00445f;"></canvas>
   <!-- canvas -->
 
@@ -82,6 +83,8 @@
 <br>
 <br>(Not done writing this down yet)
 <br>
+<h4>nocturnestyle</h4>
+<p>canvas20211014</p>
 <canvas id="canvas20211014" width="500px" height="500px" style="border:1px solid #00445f;"></canvas>
 <!-- canvas20211014 -->
 <!-- NOCTURNESTYLE -->
@@ -118,7 +121,8 @@ long way down 5 <br><br>
 *//////=dialog
 </div>
 
-<!-- canvas1 similar shirt -->
+<h4>similar shirt</h4>
+<p>canvas1</p>
 <canvas id="canvas1" width="500px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 <!-- /canvas for similar shirt riff -->
 
