--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@ for (e=0; e<3; e++) {
     }
   }
    let noteHeads20211014 = [
-       [[30,25], [40,20], [50,25], [60,20], [70,25], [80,20]],
-       [[30,-15], [35,-25], [40,-10], [45,-15], [50,-15]]
+       [[50,25], [60,20], [70,25], [90,20], [100,25], [110,20]],
+       [[50,-15], [60,-25], [70,-10], [90,-15], [100,-15]]
    ];
    for (i=0; i<noteHeads20211014.length; i++) {
      for (ii=0; ii<noteHeads20211014[i].length; ii++) {
        let x = noteHeads20211014[i][ii][0];
-       let y = noteHeads20211014[i][ii][1]+30+20;
+       let y = noteHeads20211014[i][ii][1]+30+20+70*i;
        drawNoteHead(x, y, ctx20211014);
      }
    }
