--- a/index.html
+++ b/index.html
@@ -436,6 +436,10 @@ for (e=0; e<3; e++) {
        [[50,25], [60,20], [70,25], [90,20], [100,25], [110,20]],
        [[50,-15], [60,-25], [70,-10], [90,-15], [100,-15]]
    ];
+   let stems = [
+     [[46,25,46,-15], [], [], [], [], []],
+     [[]]
+   ];
    for (i=0; i<noteHeads20211014.length; i++) {
      for (ii=0; ii<noteHeads20211014[i].length; ii++) {
        let x = noteHeads20211014[i][ii][0];
