--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@ for (e=0; e<3; e++) {
   }
    let noteHeads20211014 = [
        [[50,25], [60,20], [70,25], [90,20], [100,25], [110,20]],
-       [[50,-15], [75,-25], [90,-10], [100,-15], [110,-15]]
+       [[]]
    ];
-   let stems = [
-     [[46,25,46,-15], [], [], [], [], []],
+   let stems20211014 = [
+     [[46,25,46,-15], [56,20,56,-15], [66,25,66,-15], [86,20,86,-15], [96,25,96,-15], [106,20,106,-15]],
      [[]]
    ];
    for (i=0; i<noteHeads20211014.length; i++) {
@@ -445,6 +445,11 @@ for (e=0; e<3; e++) {
        let x = noteHeads20211014[i][ii][0];
        let y = noteHeads20211014[i][ii][1]+30+20+70*i;
        drawNoteHead(x, y, ctx20211014);
+       let x1 = stems20211014[i][ii][0];
+       let x2 = stems20211014[i][ii][2];
+       let y1 = stems20211014[i][ii][1];
+       let y2 = stems20211014[i][ii][3];
+       drawLine(x1, y1, x2, y2, ctx20211014);
      }
    }
   /*
