--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@ for (e=0; e<3; e++) {
        drawNoteHead(x, y, ctx20211014);
        let x1 = stems20211014[i][ii][0];
        let x2 = stems20211014[i][ii][2];
-       let y1 = stems20211014[i][ii][1]+30+20;
-       let y2 = stems20211014[i][ii][3]+30+20;
+       let y1 = stems20211014[i][ii][1]+30+20+70*i;
+       let y2 = stems20211014[i][ii][3]+30+20+70*i;
        drawLine(x1, y1, x2, y2, ctx20211014);
      }
    }
