--- a/index.html
+++ b/index.html
@@ -414,8 +414,9 @@ for (e=0; e<3; e++) {
   let y1 = 30+10*0+160*e;
   let y2 = 30+10*11+160*e;
   drawLine(x1, y1, x2, y2, ctx20211014);
+  //  twice:
   for (ii=0; ii<2; ii++) {
-    //  draw staff
+    //  draw staff:
     for (i=0; i<5; i++) {
       let x1 = 0;
       let x2 = canvas20211014.width;
@@ -437,8 +438,15 @@ for (e=0; e<3; e++) {
        [[50,-10], [120,-5], [140,-30], [180,-35]]
    ];
    let stems20211014 = [
-     [[47,25,47,-5], [57,20,57,-5], [67,25,67,-5], [87,20,87,-5], [97,25,97,-5], [107,20,107,-5]],
-     [[47,-10,47,15], [117,-5,117,15], [137,-30,137,15], [177,-35,177,15]]
+     [[47,25,47,0], [57,20,57,-5], [67,25,67,0], [87,20,87,-5], [97,25,97,0], [107,20,107,-5]],
+     [[47,-10,47,15], [117,-5,117,15], [137,-30,137,-5], [177,-35,177,-5]]
+   ];
+   let beams20211014 = [
+     [[47,0,57,-5], [97,0,107,-5]],
+     []
+   ]
+   let barlines20211014 = [
+     [[115,30,115,140], [200,30,200,140], [300,30,300,140], [400,30,400,140]]
    ];
    for (i=0; i<noteHeads20211014.length; i++) {
      for (ii=0; ii<noteHeads20211014[i].length; ii++) {
@@ -450,6 +458,20 @@ for (e=0; e<3; e++) {
        let y1 = stems20211014[i][ii][1]+30+20+70*i;
        let y2 = stems20211014[i][ii][3]+30+20+70*i;
        drawLine(x1, y1, x2, y2, ctx20211014);
+       if (beams20211014[i][ii] != null) {
+         x1 = beams20211014[i][ii][0];
+         x2 = beams20211014[i][ii][2];
+         y1 = beams20211014[i][ii][1]+30+20+70*i;
+         y2 = beams20211014[i][ii][3]+30+20+70*i;
+         drawThickLine(x1, y1, x2, y2, ctx20211014);
+       }
+       if (barlines20211014[i][ii] != null) {
+         x1 = barlines20211014[i][ii][0];
+         x2 = barlines20211014[i][ii][2];
+         y1 = barlines20211014[i][ii][1];
+         y2 = barlines20211014[i][ii][3];
+         drawLine(x1, y1, x2, y2, ctx20211014);
+       }
      }
    }
   /*
