--- a/index.html
+++ b/index.html
@@ -440,6 +440,10 @@ for (e=0; e<3; e++) {
      [[47,25,47,-5], [57,20,57,-5], [67,25,67,-5], [87,20,87,-5], [97,25,97,-5], [107,20,107,-5]],
      [[47,-10,47,15], [117,-5,117,15], [137,-30,137,15], [177,-35,177,15]]
    ];
+	 let beams20211014 = [
+	 	[[47,-5,57,-5], [97,-5,107,-5]],
+		[]
+	 ];
    for (i=0; i<noteHeads20211014.length; i++) {
      for (ii=0; ii<noteHeads20211014[i].length; ii++) {
        let x = noteHeads20211014[i][ii][0];
@@ -450,6 +454,11 @@ for (e=0; e<3; e++) {
        let y1 = stems20211014[i][ii][1]+30+20+70*i;
        let y2 = stems20211014[i][ii][3]+30+20+70*i;
        drawLine(x1, y1, x2, y2, ctx20211014);
+			 x1 = beams20211014[i][ii][0];
+			 x2 = beams20211014[i][ii][2];
+			 y1 = beams20211014[i][ii][1]+30+20+70*i;
+			 y2 = beams20211014[i][ii][3]+30+20+70*i;
+			 drawThickLine(x1, y1, x2, y2, ctx20211014);
      }
    }
   /*
