--- a/index.html
+++ b/index.html
@@ -445,12 +445,9 @@ for (e=0; e<3; e++) {
      []
    ]
    let barlines20211014 = [
-     [[115,30,115,140], [200,30,200,140], [300,30,300,140], [400,30,400,140]]
+     [[120,30,110,140], [200,30,200,140], [300,30,300,140], [400,30,400,140]],
+		 []
    ];
-	 let beams20211014 = [
-	 	[[47,-5,57,-5], [97,-5,107,-5]],
-		[]
-	 ];
    for (i=0; i<noteHeads20211014.length; i++) {
      for (ii=0; ii<noteHeads20211014[i].length; ii++) {
        let x = noteHeads20211014[i][ii][0];
@@ -461,11 +458,6 @@ for (e=0; e<3; e++) {
        let y1 = stems20211014[i][ii][1]+30+20+70*i;
        let y2 = stems20211014[i][ii][3]+30+20+70*i;
        drawLine(x1, y1, x2, y2, ctx20211014);
-			 x1 = beams20211014[i][ii][0];
-			 x2 = beams20211014[i][ii][2];
-			 y1 = beams20211014[i][ii][1]+30+20+70*i;
-			 y2 = beams20211014[i][ii][3]+30+20+70*i;
-			 drawThickLine(x1, y1, x2, y2, ctx20211014);
        if (beams20211014[i][ii] != null) {
          x1 = beams20211014[i][ii][0];
          x2 = beams20211014[i][ii][2];
@@ -482,33 +474,27 @@ for (e=0; e<3; e++) {
        }
      }
    }
-  /*
-  let barlines20211014 = [
-    [],
-    [],
-    []
-  ]
-  for (i=0; i<barlines20211014.length; i++) {
-
-  }
-  */
 }
-// let chords20211014 = [
-//   ['D', 'F#(Cm6)', 'Bm'],
-//   ['D', 'F#', 'Bm'],
-//   ['Bm', 'Bm/A', 'E', 'G'],
-//   ['Bb', 'A'],
-//   ['G', 'Cm', 'Em'],
-//   ['G', 'Cm', 'Em'],
-//   ['D', 'D/C', 'D/B', 'D/Bb']
-// 	];
-// let chords20211014x = [
-//   25, 65, 145, 205,
-//   265, 305, 385
-// ];
-// for (i=0; i<chords20211014.length; i++) {
-//   ctx20211014.fillText(chords20211014[i], chords20211014x[i], 15+160*i);
-// }
+////////////////////////////////////////////////////////////////////////
+let chords20211014 = [
+  ['D', 'F#(Cm6)', 'Bm'],
+  ['D', 'F#', 'Bm'],
+  ['Bm', 'Bm/A', 'E', 'G'],
+  ['Bb', 'A'],
+  ['G', 'Cm', 'Em'],
+  ['G', 'Cm', 'Em'],
+  ['D', 'D/C', 'D/B', 'D/Bb']
+	];
+let chords20211014x = [
+  25, 65, 145, 205,
+  265, 305, 385
+];
+for (i=0; i<chords20211014.length; i++) {
+	for (ii=0; ii<chords20211014[i].length; ii++) {
+		ctx20211014.fillText(chords20211014[i][ii], chords20211014x[ii]*1.5, 15+160*i);
+	}
+}
+/////////////////////////////////////////////////////////////////////////
 
 ////  NEW AQUATIC WASTELAND
 ////  NEW AQUATIC WASTELAND
